<resources>
    <string name="app_name">Projo</string>
    <string name="create">Create</string>
    <string name="deadline">Deadline</string>
    <string name="end_time">End Time</string>
    <string name="description">Description</string>
    <string name="title">Title</string>
    <string name="title_for_your_task">title for your task</string>
    <string name="des">description…</string>
    <string name="select_date_and_time">select date and time</string>
    <string name="create_a_new_task">Create a New Task</string>
    <string name="search">Search</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="appName">Projo</string>
    <string name="update">Update</string>
    <string name="update_status_of_the_task">Update Status of The Task</string>
    <string name="to_do">To Do</string>
    <string name="in_progress">In-Progress</string>
    <string name="completed">Completed</string>
    <string name="manage_your_work_here">Manage Your Work Here..</string>
    <string-array name="status_options">
        <item>To-Do</item>
        <item>In-Progress</item>
        <item>Completed</item>
    </string-array>
</resources>