<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/primary"
        tools:context=".AddTask">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/titleLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Update the Task"
                    android:fontFamily="@font/montserrat_bold"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:layout_marginTop="15dp"
                    android:textAlignment="center"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/title"
                        style="@style/textLabel" />

                    <EditText
                        android:id="@+id/updateTaskTitle"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:hint="@string/title_for_your_task"
                        android:layout_weight="1"
                        style="@style/editText"
                        android:background="@drawable/edit_text_background"
                        android:inputType="text"
                        android:textSize="16sp"
                        android:padding="10dp"
                        android:drawableEnd="@drawable/baseline_short_text_24"/>
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/description"
                        style="@style/textLabel" />

                    <EditText
                        android:id="@+id/updateTaskDescription"
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:hint="@string/des"
                        android:layout_weight="1"
                        style="@style/editText"
                        android:background="@drawable/edit_text_background"
                        android:inputType="textMultiLine"
                        android:textSize="16sp"
                        android:padding="10dp"
                        android:drawableEnd="@drawable/baseline_description_24"
                        android:gravity="start|top" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/textLabel"
                        android:text="@string/deadline"/>

                    <EditText
                        android:id="@+id/updateTaskDeadline"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_weight="1"
                        android:hint="@string/select_date_and_time"
                        style="@style/editText"
                        android:background="@drawable/edit_text_background"
                        android:inputType="text"
                        android:textSize="16sp"
                        android:padding="10dp"
                        android:focusable="false"
                        android:clickable="true"
                        android:drawableEnd="@drawable/baseline_calendar_month_24"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/textLabel"
                        android:text="@string/update_status_of_the_task"/>

                    <Spinner
                        android:id="@+id/updateTaskStatusSpinner"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:elevation="20dp"
                        android:padding="10dp"
                        android:textSize="16sp"
                        app:layout_constraintTop_toBottomOf="@id/updateTaskDeadline"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:entries="@array/status_options" />


                </LinearLayout>




            </LinearLayout>


        </ScrollView>

        <Button
            android:id="@+id/btnUpdateTask"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="20dp"
            android:backgroundTint="@color/darkBlue"
            android:fontFamily="@font/montserrat_bold"
            android:padding="10dp"
            android:text="@string/update"
            android:textColor="@color/primary"
            android:textSize="16sp"
            android:elevation="20dp"
            app:cornerRadius="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>